bugs squashed + form submission

--- a/css/aboutStyles.css
+++ b/css/aboutStyles.css
@@ -47,6 +47,7 @@
     grid-row: 1 / 4;
     width: auto;
     height: 450px;
+    max-height: 100%;
 }
 
 .whoAmI p {
