--- a/css/backlogStyles.css
+++ b/css/backlogStyles.css
@@ -20,6 +20,7 @@
 }
 
 .manPhoto {
+    padding: 0;
     height: 353px;
     width: auto;
 }
